--- a/Healthcare_Premium_rest.ipynb
+++ b/Healthcare_Premium_rest.ipynb
@@ -186,6 +186,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cf4cceb-f1e3-49ba-b1bd-f7a7e4bcf785",
+   "metadata": {},
+   "source": [
+    "This line:\n",
+    "\n",
+    "Adds a new column called Genetical_Risk to the df DataFrame.\n",
+    "\n",
+    "Assigns a value of 0 to all rows in that column.\n",
+    "\n",
+    "Ensures consistent schema with the model trained on the young dataset (which includes Genetical_Risk)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5180929e-0b5a-4874-afb1-aa4135d01599",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "64957002-faef-4d99-bb86-b474360e0e99",
